# prompt-library

./: .gitignore  LICENSE  README.md
prompts/understand-academic-paper/: .gitignore  README.md  example-arxiv-2509-00997.txt  generate_prompts.py  llm-agent-failures-analysis.md  nemori-analysis.md  pyproject.toml  result-arxiv-2509-00997.md  template.txt  urls.txt
prompts/understand-academic-paper/Holistic-Agent-Leaderboard-(HAL)/: explanation-pdf-2510.11977.md  prompt-pdf-2510.11977 copy.txt
prompts/understand-academic-paper/agent-first-database-systems/: prompt-agent-first-database-systems.txt
prompts/understand-academic-paper/agentgym-rl-training-llm-agents/: explanation-agentgym-rl-training-llm-agents.md
prompts/understand-academic-paper/ai-model-collapse-recursive-training/: explanation-ai-model-collapse-recursive-training.md
prompts/understand-academic-paper/articles-s41586-024-07566-y/: prompt-articles-s41586-024-07566-y.txt
prompts/understand-academic-paper/arxiv-2509-00997/: example-arxiv-2509-00997.txt  explanation-arxiv-2509-00997.md
prompts/understand-academic-paper/html-2410.23242/: prompt-html-2410.23242.txt
prompts/understand-academic-paper/k2-think-parameter-efficient-reasoning/: explanation-k2-think-parameter-efficient-reasoning.md  prompt-k2-think-parameter-efficient-reasoning.txt
prompts/understand-academic-paper/llm-physical-reasoning-3d-environment/: explanation-llm-physical-reasoning-3d-environment.md  prompt-llm-physical-reasoning-3d-environment.txt
prompts/understand-academic-paper/pdf-2509.07367/: explanation-pdf-2509.07367.md
(+13 files in other folders)
